# py-oop-algorithms

./: README.md  example.py  pyproject.toml  requirements.txt
src/algorithm/: base.py  step_count.py
src/converter/: accelerometer.py  base.py
src/data/: accelerometer.py  gyroscope.py  imu.py  magnetometer.py
